--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -29,7 +29,9 @@
     -->
 
     <!--STYLES-->
-    <link rel="stylesheet" href="/min/production.min.css">
+    <link rel="stylesheet" href="/styles/default/default.css">
+    <link rel="stylesheet" href="/styles/default/passport.css">
+    <link rel="stylesheet" href="/styles/importer.css">
     <!--STYLES END-->
   </head>
 
@@ -88,7 +90,20 @@
     -->
 
     <!--SCRIPTS-->
-    <script src="/min/production.min.js"></script>
+    <script src="/js/dependencies/sails.io.js"></script>
+    <script src="/js/common/app.js"></script>
+    <script src="/js/common/main.js"></script>
+    <script src="/js/default/DefaultFunc.js"></script>
+    <script src="/js/default/HandleStu.js"></script>
+    <script src="/js/default/actstudy.js"></script>
+    <script src="/js/default/config.js"></script>
+    <script src="/js/default/counselor.js"></script>
+    <script src="/js/default/index.js"></script>
+    <script src="/js/default/pubapi.js"></script>
+    <script src="/js/default/useradmin.js"></script>
+    <script src="/js/passport/PassportPanel.js"></script>
+    <script src="/js/passport/login.js"></script>
+    <script src="/js/passport/register.js"></script>
     <!--SCRIPTS END-->
   </body>
 </html>
